# eisl

./:   .c  .gitattributes  .gitignore  .gitmodules  .lsp  GPGPU.md  README-ja.md  README.md  STAT.md  a.out  asd  asdf.c  bigdata  bignum.c  brain-fuck.lsp  bug.lsp  c  cell.c  compiler.c  compiler.lsp  compute.c  cudamake  data.c  data.c~  data1.txt  data2.txt  dextension.d  disl.d  edit.c  edit.c~  edlis  edlis.c  edlis.cpp  edlis.c~  edlis.h  edlis.hpp  edlisp.c  edmin  edmin.c  (+62 more)
.github/: FUNDING.yml
bench/: README  boyer.c  boyer.lsp  browse.c  browse.lsp  browse0.c  browse1.c  browse2.c  browse3.c  browse4.c  cpbench.c  cpbench.lsp  ctak.c  ctak.lsp  dderiv.c  dderiv.lsp  deriv.lsp  destru.lsp  destru0.c  destru1.c  destru2.c  div2.lsp  div20.c  div21.c  div22.c  div24.c  fft.c  fft.lsp  fib20.c  fib20.lsp  fprint.lsp  fprint1.c  fprint4.c  fread.lsp  frpoly.lsp  frpoly0.c  frpoly1.c  frpoly2.c  frpoly3.c  frpoly4.c  (+21 more)
cii/include/: fmt.h
cii/src/: ap.c  arena.c  arith.c  array.c  assert.c  atom.c  bit.c  chan.c  except.c  fmt.c  list.c  mem.c  memchk.c  mp.c  ring.c  seq.c  set.c  stack.c  str.c  table.c  text.c  thread-nt.c  thread.c  xp.c
compat/: cdefs.h  curses_stubs.h  eiffel_stubs.h  locale.h  nana.h  nana_stubs.h  term_stubs.h
documents/: ATFIRST.md  BENCH.md  BIT.md  CHAITIN.md  CHITIN.md  CLUSTER.md  COMBINATION.md  COMPILER.md  COMPLEX.md  CROSS.md  CSV.md  CTRLCHAR.md  DATETIME.md  DEBUG.md  EDLIS.md  EDLISP.md  ELIXIR.md  ESCAPE.md  EXTENDED.md  FORMATTER.md  FORMULA.md  FUNCTIONS.md  FUNCTIONSJ.md  GBC.md  GNUPLOT.md  GPGPU.md  GPIO.md  GRAPHICS.md  HASH.md  INTERFACE-LISPtoC.md  ISLISP-ja.md  ISLISP.md  LAZY.md  LIST.md  MACRO.md  MATH.md  MATRIX.md  MEXP.md  MODULE.md  OPENGL.md  (+28 more)
example/: atn.lsp  bit.c  bit.lsp  brain-fuck.lsp  chaitin.lsp  circle.lsp  collatz.lsp  crud.lsp  ctlisp.lsp  db.lsp  de.msg  derive.lsp  dna.lsp  doctor.lsp  editor.lsp  edlisp.c  edlisp.lsp  en.msg  enigma.lsp  factor.lsp  fast.h  foo.lsp  foo.m  formula.lsp  forth.c  forth.lsp  fr.msg  gcd.lsp  gcd.pas  gl-test.lsp  godel.lsp  gps.lsp  hanoi.lsp  ilos.lsp  kaprekar.c  kaprekar.lsp  lambda-test.lsp  lambda.lsp  lazy.lsp  led.lsp  (+39 more)
nana/: ANNOUNCE  AUTHORS  COPYING  ChangeLog  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.in  NEWS  PROJECTS  README  README.md  THANKS  TODO  acnana.m4  config.status  configure  configure.ac  configure.in~  configure~  showconfig.c
nana/autom4te.cache/: output.0  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
nana/doc/: Makefile  Makefile.am  Makefile.in  mdate-sh  nana.info  nana.texi  version.texi
nana/emacs/: Makefile  Makefile.am  Makefile.in  README  fess.el
nana/examples/: D.ex  I.ex  Makefile  Makefile.am  Makefile.in  install.ex  ott.h  syslog.c
nana/gdb/: Makefile  Makefile.am  Makefile.in  README  nana-libtrace  nana-libtrace.in  nana-trace  nana-trace.gdb  nana-trace.in  quiet.diff  test.c
nana/man/: DI.3  DL.3  I.3  L.3  Makefile  Makefile.am  Makefile.in  Q.3  Qstl.3  README  nana-clg.1  nana.1  nana.3
nana/perf/: Makefile  Makefile.am  Makefile.in  README  T  a.out  assert.mtex  assert.tst  bogomips  bogomips.c  bogomips.mtex  c_ops.mtex  c_ops.tst  code.mtex  dcache.mtex  dcache.tst  init.l2h  log.mtex  log.tst  measure.sh  nop.mtex  nop.tst  perf.aux  perf.dvi  perf.tex  postlude.c  prelude.c  quantifiers.mtex  quantifiers.tst  summary.mtex  summary.tst  tmp.c  tmp.s  uname.mtex
nana/perf/perf/: perf.html
nana/shortform/: Makefile  Makefile.am  Makefile.in  README  example.c  nana-sfdir  nana-sfdir.in  nana-sfg  nana-sfg.in  smallex.c
nana/src/: ChangeLog  DI.h  DL.h  GDB.h  I.c  I.h  L.h  L_buffer.c  L_buffer.h  L_times.c  L_times.h  Makefile  Makefile.am  Makefile.in  Q.h  Qstl.h  README  TODO  assert.h  calls.c  calls.h  cycles.c  cycles.h  eiffel.h  nana  nana-c++lg  nana-c++lg.in  nana-clg  nana-clg.in  nana-config.h  nana-config.h.in  nana-run  nana-run-init.gdb  nana-run.gdb  nana-run.in  nana.h  nana.in  nana_error.c  nana_error.h  nanafilter  (+3 more)
nana/src/.deps/: I.Po  L_buffer.Po  L_times.Po  calls.Po  cycles.Po  nana_error.Po  nanafilter.Po  now.Po
nana/test/: ChangeLog  I.gam  Makefile  Makefile.am  Makefile.in  Q.gam  README  all.gam  check.var  compile.var  footer.var  gammon  gammon.in  header.var  passed-tests  run.var  source.var  title.var  topic.var
test/: arithmetic-test.lsp  array-test.lsp  controle-test.lsp  convert-test.lsp  list-test.lsp  object-test.lsp  predicate-test.lsp  symbol-test.lsp
tests/: #bug.lsp#  #tarai.lsp#  LIST.md  arvyy.lsp  atn.lsp  bar.lsp  bench.lsp  big-comp.lsp  big-test.lsp  big.lsp  bitcomb.lsp  bug.c  bug.lisp  bug.lsp  bug.tmp  bug0.c  bug1.c  bug2.c  bug2.lsp  bug22.c  bug3.c  bug3.lsp  bug4.c  bug4.lsp  bug5.c  bug5.lsp  bug6.c  ccurve.lsp  chaitin.lsp  controle-test.lsp  convert-test.lsp  cross.lsp  csv-test.lsp  derive.lsp  dfa.lsp  dlist.lsp  dna.lsp  editor.lsp  elixir-test.lsp  elixir.lsp  (+130 more)
verify/: all-test.lsp  all.lsp  all.sh  arithmetic-test.lsp  array-test.lsp  array.lsp  arvyy.lsp  bignum.lsp  block.lsp  char-test.lsp  char.lsp  comp.sh  cond.lsp  control.lsp  declare.lsp  file.lsp  files.lsp  formeval.lsp  hiroi.lsp  ilos.lsp  io.lsp  islsp0  islsp10  islsp12  islsp13  islsp14  islsp16  islsp18  islsp20  islsp4  islsp5  islsp7  islsp9  list-test.lsp  list.lsp  macro.lsp  matrix.lsp  misc.lsp  noble.lsp  number.lsp  (+24 more)
